--- a/scripts/plan9/tlg.rc
+++ b/scripts/plan9/tlg.rc
@@ -28,16 +28,16 @@ fn readauth{
 
 fn worklist{
         if (~ $1 PHI)
-                $EXECROOT/bin/tlgviewer -f $PHIROOT/'LAT'$2'.TXT' -list
+                $EXECROOT/bin/tlgviewer -f $PHIROOT/'lat'$2'.txt' -list
         if not
-                $EXECROOT/bin/tlgviewer -f $TLGROOT/'TLG'$2'.TXT' -list
+                $EXECROOT/bin/tlgviewer -f $TLGROOT/'TLG'$2'.txt' -list
 }
 
 fn readwork{
         if (~ $1 PHI)
-                $EXECROOT/bin/tlgviewer -f $PHIROOT/'LAT'$2'.TXT' -w $3
+                $EXECROOT/bin/tlgviewer -f $PHIROOT/'lat'$2'.txt' -w $3
         if not
-                $EXECROOT/bin/tlgviewer -f $TLGROOT/'TLG'$2'.TXT' -w $3
+                $EXECROOT/bin/tlgviewer -f $TLGROOT/'TLG'$2'.txt' -w $3
 }
 
 fn search{
