Make build.rc show some messages

--- a/build.rc
+++ b/build.rc
@@ -1,11 +1,13 @@
 #!/bin/rc
 
+echo 'build executables..'
 go build -o bin/indexer ./cmd/indexer
 go build -o bin/search ./cmd/search
 go build -o bin/tlgviewer ./cmd/tlgviewer
 go build -o bin/readauth ./cmd/readauth
 go build -o bin/lemmata ./cmd/lemmata
 
+echo 'copying scripts'
 cp scripts/plan9/* bin/
 
 cd dependencies && ../bin/indexer
