--- a/build.rc
+++ b/build.rc
@@ -1,6 +1,8 @@
 #!/bin/rc
 
-hget https://www.unicode.org/Public/17.0.0/ucd/UnicodeData.txt > UnicodeData.txt
+if (! test -e UnicodeData.txt ) {
+	hget https://www.unicode.org/Public/17.0.0/ucd/UnicodeData.txt > UnicodeData.txt
+}
 
 go run pkg/tlgcore/gentable.go
 
