--- a/scripts/plan9/tlg.rc
+++ b/scripts/plan9/tlg.rc
@@ -1,20 +1,20 @@
 #!/bin/rc
 
-EXECROOT=$home/git/tlgread-go
-TLGROOT=$home/TLG/TLG-E
-PHIROOT=$home/TLG/PHI-5
+LYCROOT=/sys/lib/lyceum
+TLGROOT=/sys/lib/lyceum/TLG-E
+PHIROOT=/sys/lib/lyceum/PHI-5
 
-GRLM=$EXECROOT/dependencies/greek-lemmata.txt
-GRAN=$EXECROOT/dependencies/greek-analyses.txt
-GRANIDT=$EXECROOT/dependencies/greek-analyses.idt
-LSJ=$EXECROOT/dependencies/grc.lsj.xml
-LSJIDT=$EXECROOT/dependencies/lsj.idt
+GRLM=$LYCROOT/dependencies/greek-lemmata.txt
+GRAN=$LYCROOT/depencencies/greek-analyses.txt
+GRANIDT=$LYCROOT/depencencies/greek-analyses.idt
+LSJ=$LYCROOT/depencencies/grc.lsj.xml
+LSJIDT=$LYCROOT/depencencies/lsj.idt
 
-LALM=$EXECROOT/dependencies/latin-lemmata.txt
-LAAN=$EXECROOT/dependencies/latin-analyses.txt
-LAANIDT=$EXECROOT/dependencies/latin-analyses.idt
-LS=$EXECROOT/dependencies/lat.ls.perseus-eng1.xml
-LSIDT=$EXECROOT/dependencies/ls.idt
+LALM=$LYCROOT/depencencies/latin-lemmata.txt
+LAAN=$LYCROOT/depencencies/latin-analyses.txt
+LAANIDT=$LYCROOT/depencencies/latin-analyses.idt
+LS=$LYCROOT/depencencies/lat.ls.perseus-eng1.xml
+LSIDT=$LYCROOT/depencencies/ls.idt
 
 
 fn usage{
@@ -41,37 +41,37 @@ fn usage{
 
 fn readauth{
 	if (~ $1 PHI)
-		$EXECROOT/bin/readauth -f $PHIROOT/authtab.dir
+		/bin/lyceum/readauth -f $PHIROOT/authtab.dir
 	if not
-		$EXECROOT/bin/readauth -f $TLGROOT/authtab.dir
+		/bin/lyceum/readauth -f $TLGROOT/authtab.dir
 }
 
 fn worklist{
 	if (~ $1 PHI)
-		$EXECROOT/bin/tlgviewer -f $PHIROOT/'lat'$2'.txt' -list
+		/bin/lyceum/tlgviewer -f $PHIROOT/'lat'$2'.txt' -list
 	if not
-		$EXECROOT/bin/tlgviewer -f $TLGROOT/'tlg'$2'.txt' -list
+		/bin/lyceum/tlgviewer -f $TLGROOT/'tlg'$2'.txt' -list
 }
 
 fn readwork{
 	if (~ $1 PHI)
-		$EXECROOT/bin/tlgviewer -f $PHIROOT/'lat'$2'.txt' -w $3
+		/bin/lyceum/tlgviewer -f $PHIROOT/'lat'$2'.txt' -w $3
 	if not
-		$EXECROOT/bin/tlgviewer -f $TLGROOT/'tlg'$2'.txt' -w $3
+		/bin/lyceum/tlgviewer -f $TLGROOT/'tlg'$2'.txt' -w $3
 }
 
 fn search{
 	if (~ $1 LAT)
-		$EXECROOT/bin/search -a $LAAN -idt $LAANIDT -dic $LS -dicidt $LSIDT -lat -w $2
+		/bin/lyceum/search -a $LAAN -idt $LAANIDT -dic $LS -dicidt $LSIDT -lat -w $2
 	if not
-		$EXECROOT/bin/search -a $GRAN -idt $GRANIDT -dic $LSJ -dicidt $LSJIDT -w $2
+		/bin/lyceum/search -a $GRAN -idt $GRANIDT -dic $LSJ -dicidt $LSJIDT -w $2
 }
 
 fn lemmata{
 	if (~ $1 LAT)
-		$EXECROOT/bin/lemmata -f $LALM -l -w $2
+		/bin/lyceum/lemmata -f $LALM -l -w $2
 	if not
-		$EXECROOT/bin/lemmata -f $GRLM -w $2
+		/bin/lyceum/lemmata -f $GRLM -w $2
 }
 
 while() {
